* ext/bigdecimal/bigdecimal.c (rmpd_power_by_big_decimal):   add RB_GC_GUARD to prevent the immediate object is GCed too early.   This patch was made by Yusuke Endoh.  [Bug #7044] [ruby-core:47632]

* test/bigdecimal/test_bigdecimal.rb: add a reproduction test for
  the issue [Bug #7044]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@38734 b2dd03c8-39d4-4d8f-98ff-823fe69b080e